yaml/ctfd/ctfd-ngnix-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ctfd
  name: ctfd-nginx
  labels:
    ctfd: nginx
    app: ctfd-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ctfd-nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        ctfd: nginx
        app: ctfd-nginx
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: env
                operator: In
                values:
                - dev-node 
      containers:
      - image: nginx:1.17
        imagePullPolicy: ""
        name: ctfd-nginx
        resources: {}
        volumeMounts:
        - mountPath: /etc/nginx/
          readOnly: true
          name: ctfd-nginx-conf
      restartPolicy: Always
      serviceAccountName: ""
      automountServiceAccountToken: false
      volumes:
      - name: ctfd-nginx-conf
        configMap:
          name: ctfd-nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  namespace: ctfd
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "ctf-backend"}'
    cloud.google.com/neg: '{"exposed_ports": {"8080":{"name": "ctfd-portal-neg"}}}'
  labels:
    app: ctfd-nginx
  name: ctfd-nginx
spec:
  ports:
  - name: proxy
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ctfd-nginx
