yaml/ctfd/ctfd-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ctfd
  creationTimestamp: null
  name: ctfd-redis-cache
  labels:
    ctfd: redis
    app: ctfd-redis-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ctfd-redis-cache
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        ctfd: redis
        app: ctfd-redis-cache
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: env
                operator: In
                values:
                - dev-node 
      containers:
      - image: redis:4
        imagePullPolicy: ""
        name: ctfd-redis-cache
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: ctfd-redis-cache-pv
      restartPolicy: Always
      serviceAccountName: ""
      automountServiceAccountToken: false
      volumes:
      - name: ctfd-redis-cache-pv
        persistentVolumeClaim:
          claimName: ctfd-redis-cache-pv
status: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: ctfd
  creationTimestamp: null
  labels:
    app: ctfd-redis-cache
  name: ctfd-redis-cache
spec:
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: ctfd-redis-cache
  type: ClusterIP
status: {}
